crates/reinhardt-pages/tests/ui/style/fail/direct_var.stderr
error: direct `var(...)` is unsupported; declare a typed `global` or component `var` and reference it
 --> tests/ui/style/fail/direct_var.rs:6:10
  |
6 |         color: var(accent);
  |                ^^^
